# agentic-ai

./: .env.example  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_tool.py
data/metrics/: request_metrics.json
docs/: 404.html  architecture.md  error_handling.md  getting-started.md  index.html  index.md  sitemap.xml  tool_finder_agent.md  tutorials.md
docs/PROMPTS/: index.html
docs/PROMPTS/guide/: index.html
docs/PROMPTS/management/: index.html
docs/agents/: index.html
docs/architecture/: index.html
docs/config/: README.md  index.html
docs/configuration_system/: index.html
docs/core/: index.html
docs/error_handling/: index.html
docs/examples/: configuration_example.md  index.html
docs/future_development/: index.html
docs/getting-started/: index.html
docs/metrics_system/: index.html
docs/prompts/: management.md
docs/search/: search_index.json
docs/tools/: overview.md
docs/utils/: index.html
documentation/: agent_descriptions.md  agents.md  architecture.md  configuration_system.md  core.md  examples.md  future_development.md  getting-started.md  metrics_system.md  utils.md
documentation/conversations/: overview.md
documentation/development/: testing_providers.md  testing_strategy.md
documentation/examples/: mcp_tool_usage.md  tool_stats_example.md
documentation/prompts/: management.md
documentation/providers/: overview.md
documentation/tools/: auto_tool_finding.md  image_generator.md  overview.md
documentation/ui/: gradio_interface.md
examples/: __init__.py  agent_usage_example.py  chat_ui_example.py  config_test.py  configuration_example.py  framework_example.py  image_generation_example.py  mcp_tool_example.py  metrics_example.py  openai_example.py  rag_mcp_example.py  simple_agent_interaction.py  tool_execution_example.py  tool_stats_example.py  tool_test_example.py  ui_example.py
examples/temp/: example_tool_stats.json
scripts/: test_meta_query.py
site/: 404.html  index.html  sitemap.xml
site/agent_descriptions/: index.html
site/error_handling/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/prompts/: index.html
site/search/: search_index.json
site/tool_finder_agent/: index.html
site/tutorials/: index.html
site/utils/: index.html
src/: __init__.py  exceptions.py
src/agents/: __init__.py  agent_factory.py  agent_registrar.py  base_agent.py  chat_agent.py  coding_assistant_agent.py  coordinator.py  listener_agent.py  orchestrator.py  request_analyzer.py  response_aggregator.py
src/config/: README.md  agents.yml  mcp.yml  models.yml  tools.yml  tools.yml.bak  unified_config.py  use_cases.yml
src/conversation/: __init__.py  conversation_manager.py
src/core/: __init__.py  base_ai.py  framework_message_formatter.py  interfaces.py  model_selector.py  models.py  provider_factory.py  tool_enabled_ai.py
src/mcp/: mcp_client_manager.py
src/metrics/: request_metrics.py
src/prompts/: prompt_manager.py  prompt_template.py
src/tools/: __init__.py  models.py  tool_executor.py  tool_manager.py  tool_registry.py  tool_stats_manager.py
src/ui/: simple_chat.py
src/utils/: interfaces.py  logger.py  retry.py
tests/: conftest.py  test_coding_assistant.py  test_orchestrator.py  test_request_analyzer.py
tests/integration/: providers_test.feature
tests/mocks/: mock_mcp_server.py
tests/tools/: test_mcp_integration.py
(+88 files in other folders)
