[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0"]

[project]
name = "agentic-ai"
version = "0.1"

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "src/__init__.py", "src/metrics/*"]

[tool.pytest.ini_options]
# Remove deprecated/unknown asyncio options
# asyncio_mode = "strict"
# asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
# Register the asyncio marker
markers = [
    "asyncio",
]
