[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0"]

[project]
name = "agentic-ai"
version = "0.1"
dependencies = [
    "openai>=1.0.0",
    "PyYAML>=5.4",
    "python-dotenv>=0.19.0",
    "termcolor>=1.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=6.0.0",
    "pytest-xdist>=2.5.0", # Optional: For parallel tests
    "anyio>=4.0.0",
    "aiohttp>=3.8.0", # For async HTTP requests if needed directly
    "langsmith>=0.1.0", # For LangSmith integration
    "pydantic>=2.0.0",
    "asteval>=0.9.27", # Added calculator tool dependency
]

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "src/__init__.py", "src/metrics/*"]

[tool.pytest.ini_options]
# Remove deprecated/unknown asyncio options
# asyncio_mode = "strict"
# asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
# Register the asyncio marker
markers = [
    "asyncio",
]
