[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64.0"]

[project]
name = "agentic-ai"
version = "0.1"
dependencies = [
    # Core Runtime
    "pydantic>=2.0.0",
    "PyYAML>=5.4",
    "python-dotenv>=0.19.0",
    "termcolor>=1.1.0",
    "asteval>=0.9.27",
    "openai>=1.0.0",
    "anthropic>=0.20", # Assuming a recent version, adjust if needed
    "google-generativeai>=0.4", # Assuming a recent version, adjust if needed
    "ollama>=0.1.8", # Assuming a recent version, adjust if needed
    "httpx>=0.25.0", # Needed by anthropic async
    "typing_extensions>=4.0.0", # Needed for Protocol runtime_checkable
    "langsmith>=0.1.0", # Keep for now
    "anyio>=4.0.0", # Keep for now (likely async dependency)
    "mcp>=1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=6.0.0",
    "pytest-xdist>=2.5.0", # Optional: For parallel tests
]
examples = [
    "gradio>=4.0.0", # For UI examples
    "aiohttp>=3.8.0", # Keep for now
    "ipython>=7.0.0", # Useful for interactive examples/notebooks
]
mcp = [
    "mcp>=0.1.0" # Correct package name is 'mcp', specify version if known
]
# Add other groups later if needed, e.g., llms, data, vectorstores

[tool.coverage.run]
source = ["src"]
omit = ["src/ui/*", "src/__init__.py", "src/metrics/*"]

[tool.pytest.ini_options]
# Remove deprecated/unknown asyncio options
# asyncio_mode = "strict"
# asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
# Exclude the MCP tests directory - REMOVED
# norecursedirs = ["tests/mcp"]
# Register the asyncio marker
markers = [
    "asyncio",
]
